--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsUsers/LvsSearchResults.html
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsUsers/LvsSearchResults.html
@@ -49,7 +49,7 @@
                 <h2 class="text-xl font-bold text-white mb-4">Dự án</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                     <div th:each="project : ${LvsProjects}" class="electro-card p-4">
-                        <a th:href="@{/user/detail/{id}(id=${project.lvsProjectId})}">
+                        <a th:href="@{/LvsUser/LvsProject/LvsDetail/{id}(id=${project.lvsProjectId})}">
                             <div class="h-32 bg-[#1e1e1e] rounded-lg mb-3 flex items-center justify-center">
                                 <i class="fas fa-image text-4xl text-gray-600"></i>
                             </div>
