--- a/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsUsers/LvsTransactions/LvsTransactionDetail.html
+++ b/k23cnt3.lucvanson.project3/k23cnt3.lucvanson.project3/src/main/resources/templates/LvsAreas/LvsUsers/LvsTransactions/LvsTransactionDetail.html
@@ -35,8 +35,33 @@
                 <!-- Transaction Details -->
                 <div class="space-y-6">
                     <div class="flex justify-between">
-                        <span class="text-gray-400">Loại giao dịch</span>
-                        <span class="text-white font-semibold" th:text="${LvsTransaction.lvsType}">Type</span>
+                        <span class="text-gray-400">Loại giao dịch:</span>
+                        <span class="text-white font-semibold">
+                            <span
+                                th:if="${LvsTransaction.lvsType == T(k23cnt3.lucvanson.project3.LvsEntity.LvsTransaction.LvsTransactionType).DEPOSIT}">
+                                <i class="fas fa-arrow-down text-green-400 mr-2"></i>Nạp tiền
+                            </span>
+                            <span
+                                th:if="${LvsTransaction.lvsType == T(k23cnt3.lucvanson.project3.LvsEntity.LvsTransaction.LvsTransactionType).WITHDRAWAL}">
+                                <i class="fas fa-arrow-up text-red-400 mr-2"></i>Rút tiền
+                            </span>
+                            <span
+                                th:if="${LvsTransaction.lvsType == T(k23cnt3.lucvanson.project3.LvsEntity.LvsTransaction.LvsTransactionType).PURCHASE}">
+                                <i class="fas fa-shopping-cart text-blue-400 mr-2"></i>Mua hàng
+                            </span>
+                            <span
+                                th:if="${LvsTransaction.lvsType == T(k23cnt3.lucvanson.project3.LvsEntity.LvsTransaction.LvsTransactionType).SALE}">
+                                <i class="fas fa-dollar-sign text-green-400 mr-2"></i>Bán hàng
+                            </span>
+                            <span
+                                th:if="${LvsTransaction.lvsType == T(k23cnt3.lucvanson.project3.LvsEntity.LvsTransaction.LvsTransactionType).REFUND}">
+                                <i class="fas fa-undo text-yellow-400 mr-2"></i>Hoàn tiền
+                            </span>
+                            <span
+                                th:if="${LvsTransaction.lvsType == T(k23cnt3.lucvanson.project3.LvsEntity.LvsTransaction.LvsTransactionType).BALANCE_TO_COIN}">
+                                <i class="fas fa-exchange-alt text-purple-400 mr-2"></i>Chuyển đổi Balance sang Coin
+                            </span>
+                        </span>
                     </div>
 
                     <div class="flex justify-between">
